--- a/app/assets/stylesheets/lines.scss
+++ b/app/assets/stylesheets/lines.scss
@@ -96,8 +96,8 @@
 }
 
 .line-swatch {
-	width: 20px;
-	height: 20px;
+	width: 2vh;
+	height: 2vh;
 	border-radius: 50px;
 }
 
